--- a/index.html
+++ b/index.html
@@ -38,7 +38,7 @@
                 </div> 
 
                 <div class="left-column">
-                    <img id="profile-pic" src="/myPorfolio.github.io/images/prof.png" alt="my picture">
+                    <img id="profile-pic" src="images/prof.png" alt="my picture">
                     <h5 style="text-align: center; line-height: 0;"> This is me 👶</h5>
 
                     <div class="themes">
